spacing fixes

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@ box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.75);
 .header {
     border-radius: 2px 3px 0 0;
     height: 20px;
-    margin-top: 25px;
+    margin-top: 7px;
     position: relative;
     z-index: 99;
 }
@@ -139,7 +139,7 @@ footer {
     background: linear-gradient(#0d0d0d, black) repeat scroll 0 0 rgba(0, 0, 0, 0);
     color: #444;
     margin: -1px;
-    min-height: 65px;
+    min-height: 60px;
     padding-top: 5px;
   a {
     color: #444;
